# atlasopenmagic

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build-and-publish.yml  build.yml  deploy-lazydocs.yml  pre-commit.yml  test.yml
atlasopenmagic/: __init__.py  metadata.py  notebooks.py  urls.py  utils.py
atlasopenmagic/data/: id_matches.py  urls.txt  urls_mc.py
docs/: metadata.md  utils.md
src/atlasopenmagic/: __init__.py  metadata.py  utils.py
tests/: test_metadata.py  test_urls.py
